[gd_scene load_steps=5 format=3 uid="uid://btodagme3g01l"]

[ext_resource type="Script" path="res://GameMechanics/Special/super_elevator.gd" id="1_hvtdc"]

[sub_resource type="QuadMesh" id="QuadMesh_hvtdc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hvtdc"]
size = Vector2(48, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_in22v"]
size = Vector2(48, 8)

[node name="SuperElevator" type="Node2D"]

[node name="SuperElevatorPlatform" type="AnimatableBody2D" parent="."]
script = ExtResource("1_hvtdc")

[node name="MeshInstance2D" type="MeshInstance2D" parent="SuperElevatorPlatform"]
position = Vector2(24, 4)
scale = Vector2(48, 8)
mesh = SubResource("QuadMesh_hvtdc")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="SuperElevatorPlatform"]
position = Vector2(24.0882, -55.4064)
scale = Vector2(-48.1567, 2.81271)
mesh = SubResource("QuadMesh_hvtdc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SuperElevatorPlatform"]
position = Vector2(24, 4)
shape = SubResource("RectangleShape2D_hvtdc")

[node name="Area2D" type="Area2D" parent="SuperElevatorPlatform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SuperElevatorPlatform/Area2D"]
position = Vector2(24, -4)
shape = SubResource("RectangleShape2D_in22v")

[node name="MinHeight" type="Marker2D" parent="."]

[node name="MaxHeight" type="Marker2D" parent="."]

[connection signal="body_entered" from="SuperElevatorPlatform/Area2D" to="SuperElevatorPlatform" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="SuperElevatorPlatform/Area2D" to="SuperElevatorPlatform" method="_on_area_2d_body_exited"]
